# GoogleTakeoutConnect

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
scripts/: setup-dev.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  matcher.rs  processor.rs
src/components/: DropZone.tsx  ProcessingView.tsx  ResultView.tsx
src/hooks/: useCloseGuard.ts
